--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,117 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+* {
+  box-sizing: border-box;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 5vw 20vw repeat(4, 1fr) 20vw 5vw;
+  grid-template-rows: 5vw 20vw 1fr 20vw 1fr 20vw 1fr 20vw 5vw;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  background-color: #cb3737;
+}
+.div1 {
+  grid-area: 2 / 7 / 3 / 8;
+  background-image: url('../public/virage.svg');
+  background-size: contain;
+  transform: rotateZ(0deg);
+}
+.div2 {
+  grid-area: 4 / 7 / 5 / 8;
+  background-image: url('../public/virage.svg');
+  background-size: contain;
+
+  transform: rotateZ(90deg);
+}
+.div3 {
+  grid-area: 4 / 2 / 5 / 3;
+  background-image: url('../public/virage.svg');
+  background-size: contain;
+  transform: rotateZ(270deg);
+}
+.div4 {
+  grid-area: 6 / 2 / 7 / 3;
+  background-image: url('../public/virage.svg');
+  background-size: contain;
+
+  transform: rotateZ(180deg);
+}
+.div5 {
+  grid-area: 6 / 7 / 7 / 8;
+  background-image: url('../public/virage.svg');
+  background-size: contain;
+
+  transform: rotateZ(0deg);
+}
+.div6 {
+  grid-area: 8 / 7 / 9 / 8;
+  background-image: url('../public/virage.svg');
+  background-size: contain;
+
+  transform: rotateZ(90deg);
+}
+.div7 {
+  grid-area: 8 / 4 / 9 / 5;
+}
+.div8 {
+  /**  gare top*/
+  grid-area: 1 / 4 / 4 / 6;
+  background-image: url('../public/gare.jpg');
+  background-size: cover;
+  margin: 20px 0 20px 20px;
+}
+.div9 {
+  grid-area: 2 / 6 / 3 / 7;
+  background-image: url('../public/horizontale.svg');
+  background-size: cover;
+}
+.div10 {
+  grid-area: 3 / 7 / 4 / 8;
+  background-image: url('../public/verticale.svg');
+  background-size: cover;
+}
+.div11 {
+  grid-area: 4 / 3 / 5 / 7;
+  background-image: url('../public/horizontale.svg');
+  background-size: contain;
+}
+.div12 {
+  grid-area: 5 / 2 / 6 / 3;
+  background-image: url('../public/verticale.svg');
+  background-size: contain;
+}
+.div13 {
+  grid-area: 6 / 3 / 7 / 7;
+  background-image: url('../public/horizontale.svg');
+  background-size: contain;
+}
+.div14 {
+  grid-area: 7 / 7 / 8 / 8;
+  background-image: url('../public/verticale.svg');
+  background-size: contain;
+}
+.div15 {
+  grid-area: 8 / 5 / 9 / 7;
+  background-image: url('../public/horizontale.svg');
+  background-size: contain;
+}
+.div16 {
+  /** text */
+  grid-area: 5 / 3 / 6 / 7;
+}
+.div17 {
+  /** another text*/
+  grid-area: 7 / 3 /8 /7;
+}
+
+.wrapper > div {
+  /* border: solid 1px red; */
 }
