--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Train+One&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -67,11 +69,19 @@ code {
   grid-area: 8 / 4 / 9 / 5;
 }
 .div8 {
+  font-family: 'Train One', cursive;
+
+  font-size: 3.5vw;
+
   /**  gare top*/
-  grid-area: 1 / 4 / 4 / 6;
-  background-image: url('../public/gare.jpg');
+  grid-area: 2/2 / 3 / 6;
+  /* background-image: url('../public/gare.jpg'); */
   background-size: cover;
-  margin: 20px 0 20px 20px;
+  /* margin: 20px 0 20px 20px; */
+}
+.div8 h1 {
+  margin-right: 2rem;
+  text-align: end;
 }
 .div9 {
   grid-area: 2 / 6 / 3 / 7;
@@ -91,7 +101,7 @@ code {
 .div12 {
   grid-area: 5 / 2 / 6 / 3;
   background-image: url('../public/verticale.svg');
-  background-size: contain;
+  background-size: cover;
 }
 .div13 {
   grid-area: 6 / 3 / 7 / 7;
@@ -101,12 +111,12 @@ code {
 .div14 {
   grid-area: 7 / 7 / 8 / 8;
   background-image: url('../public/verticale.svg');
-  background-size: contain;
+  background-size: cover;
 }
 .div15 {
   grid-area: 8 / 5 / 9 / 7;
   background-image: url('../public/horizontale.svg');
-  background-size: contain;
+  background-size: cover;
 }
 .div16 {
   /** text */
@@ -114,9 +124,45 @@ code {
 }
 .div17 {
   /** another text*/
-  grid-area: 7 / 3 /8 /7;
+  grid-area: 7 / 2 /8 /7;
+}
+.div17 .flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.div17 .flex p {
+  margin: 2rem;
+}
+.div18 {
+  grid-area: 8 / 2 /8 /5;
+  background-color: blue;
+}
+.div19 {
+  grid-area: 3/3 / 4 / 6;
+  height: fit-content;
+  margin: auto;
+}
+.div19 p {
+  font-family: 'Train One', cursive;
+  color: white;
+  font-size: 1.5rem;
 }
 
 .wrapper > div {
-  /* border: solid 1px red; */
+  border: solid 1px rgb(205, 199, 46);
+}
+@media (max-width: 742px) {
+  .vertical {
+    background-size: contain;
+  }
+}
+@media (min-width: 1024px) {
+  .div17 .flex {
+    flex-direction: row;
+  }
+  .div17 .flex p {
+    margin: 3vw 5vw;
+  }
 }
