ajout de sprites

--- a/src/components/Second.module.css
+++ b/src/components/Second.module.css
@@ -40,6 +40,8 @@
   grid-row-end: 12;
   grid-column-end: 8;
 }
+
+/** START TURNS*/
 .item_4 {
   background-color: #b81986;
   grid-row-start: 2;
@@ -148,39 +150,9 @@
   background-size: contain;
   transform: rotateZ(270deg);
 }
-.item_13 {
-  background-color: #3e888a;
-  grid-row-start: 3;
-  grid-column-start: 4;
+/** END TURNS*/
 
-  grid-row-end: 4;
-  grid-column-end: 5;
-
-  background-image: url('../../public/verticale.svg');
-  background-size: cover;
-}
-.item_14 {
-  background-color: #3e888a;
-  grid-row-start: 5;
-  grid-column-start: 6;
-
-  grid-row-end: 6;
-  grid-column-end: 7;
-
-  background-image: url('../../public/verticale.svg');
-  background-size: cover;
-}
-.item_15 {
-  background-color: #3e888a;
-  grid-row-start: 7;
-  grid-column-start: 2;
-
-  grid-row-end: 8;
-  grid-column-end: 3;
-
-  background-image: url('../../public/verticale.svg');
-  background-size: cover;
-}
+/** START HORIZONTAL*/
 .item_16 {
   background-color: #009419;
   grid-row-start: 4;
@@ -190,7 +162,7 @@
   grid-column-end: 6;
 
   background-image: url('../../public/horizontale.svg');
-  background-size: cover;
+  background-size: contain;
 }
 .item_17 {
   background-color: #5adb6d;
@@ -211,7 +183,7 @@
   grid-row-end: 9;
   grid-column-end: 6;
 
-  background-image: url('../../public/horizontale.svg');
+  background-image: url('../../public/water_H.gif');
   background-size: contain;
 }
 .item_19 {
@@ -223,6 +195,42 @@
   grid-column-end: 6;
 
   background-image: url('../../public/horizontale.svg');
+  background-size: contain;
+}
+/**  END HORIZONTAL*/
+
+/**  START VERTICAL*/
+.item_13 {
+  background-color: #3e888a;
+  grid-row-start: 3;
+  grid-column-start: 4;
+
+  grid-row-end: 4;
+  grid-column-end: 5;
+
+  background-image: url('../../public/waterFall.gif');
+  background-size: cover;
+}
+.item_14 {
+  background-color: #3e888a;
+  grid-row-start: 5;
+  grid-column-start: 6;
+
+  grid-row-end: 6;
+  grid-column-end: 7;
+
+  background-image: url('../../public/waterFall.gif');
+  background-size: cover;
+}
+.item_15 {
+  background-color: #3e888a;
+  grid-row-start: 7;
+  grid-column-start: 2;
+
+  grid-row-end: 8;
+  grid-column-end: 3;
+
+  background-image: url('../../public/waterFall.gif');
   background-size: cover;
 }
 .item_20 {
@@ -233,11 +241,14 @@
   grid-row-end: 10;
   grid-column-end: 7;
 
-  background-image: url('../../public/verticale.svg');
+  background-image: url('../../public/waterFall.gif');
   background-size: cover;
 }
+
+/** END VERTICAL */
+
+/** TRAIN TOP  */
 .item_21 {
-  /** TRAIN TOP  */
   background-color: #9b9abc;
   grid-area: 2/4/2/3;
   display: flex;
@@ -259,8 +270,9 @@
   grid-row-end: 12;
   grid-column-end: 4;
 }
+
+/**  TITRE  */
 .item_23 {
-  /**  TITRE  */
   background-color: #c8657c;
   grid-row-start: 3;
   grid-column-start: 2;
